--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -190,14 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training with: impurity_func: entropy, max_depth: 20, min_instances: 2, target_impurity: 0\n"
+      "Training with: impurity_func: entropy, max_depth: 20, min_instances: 2, target_impurity: 0\n",
+      "Result: Validation accuray: 0.7346938775510204 || Test accuray: 0.6730038022813688 \n",
+      "\n"
      ]
     }
    ],
@@ -213,8 +215,8 @@
     "            test = test,\n",
     "            impurity_func = 'entropy',\n",
     "            discrete_threshold = 10,\n",
-    "            max_depth = 50,\n",
-    "            min_instances = 2,\n",
+    "            max_depth = 10,\n",
+    "            min_instances = 4,\n",
     "            target_impurity = 0)\n",
     "print('Result: Validation accuray: {} || Test accuray: {} \\n'.format(validation_accuracy,test_accuracy))\n"
    ]
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +239,7 @@
     "    train_fold, valid_fold = n_folds(10,train)\n",
     "    impurity_funcs = ['entorpy']\n",
     "    records = pd.DataFrame(columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy'])\n",
-    "    for max_depth ,min_instances, target_impurity, impurity_func in product(range(5,30,3), range(2,12,2),np.arange(0,0.2,0.05),impurity_funcs):   \n",
+    "    for max_depth ,min_instances, target_impurity, impurity_func in product(range(5,30,2), range(2,12,2),np.arange(0,0.2,0.05),impurity_funcs):   \n",
     "                    try:\n",
     "                        validation_accuracy, test_accuracy =apply_DTree(train = train_fold,\n",
     "                                    validation = valid_fold,\n",
@@ -256,18 +258,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "beef9e9230b94e7991ea1106f6c566f9",
+       "model_id": "67116685ca5e47a1a4d8fcf95a02c7eb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/8 [00:00<?, ?it/s]"
+       "  0%|          | 0/260 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -306,102 +308,138 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>entorpy</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.605</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.680272</td>\n",
        "      <td>N/A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>entorpy</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.510</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.687075</td>\n",
        "      <td>N/A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>entorpy</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.605</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.687075</td>\n",
        "      <td>N/A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>entorpy</td>\n",
+       "      <td>5</td>\n",
        "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.510</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.680272</td>\n",
        "      <td>N/A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>entorpy</td>\n",
+       "      <td>5</td>\n",
        "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.680</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.687075</td>\n",
        "      <td>N/A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
        "      <td>entorpy</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.510</td>\n",
+       "      <td>29</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.741497</td>\n",
        "      <td>N/A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>256</th>\n",
        "      <td>entorpy</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.680</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.727891</td>\n",
        "      <td>N/A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>257</th>\n",
        "      <td>entorpy</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.510</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.727891</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>258</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.734694</td>\n",
+       "      <td>N/A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
+       "      <td>entorpy</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.741497</td>\n",
        "      <td>N/A</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>260 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  impurity_func max_depth min_instances  target_impurity  validation_accuracy  \\\n",
-       "0       entorpy         2             3              0.0                0.605   \n",
-       "1       entorpy         2             3              0.6                0.510   \n",
-       "2       entorpy         2             4              0.0                0.605   \n",
-       "3       entorpy         2             4              0.6                0.510   \n",
-       "4       entorpy         4             3              0.0                0.680   \n",
-       "5       entorpy         4             3              0.6                0.510   \n",
-       "6       entorpy         4             4              0.0                0.680   \n",
-       "7       entorpy         4             4              0.6                0.510   \n",
+       "    impurity_func max_depth min_instances  target_impurity  \\\n",
+       "0         entorpy         5             2             0.00   \n",
+       "1         entorpy         5             2             0.05   \n",
+       "2         entorpy         5             2             0.10   \n",
+       "3         entorpy         5             2             0.15   \n",
+       "4         entorpy         5             4             0.00   \n",
+       "..            ...       ...           ...              ...   \n",
+       "255       entorpy        29             8             0.15   \n",
+       "256       entorpy        29            10             0.00   \n",
+       "257       entorpy        29            10             0.05   \n",
+       "258       entorpy        29            10             0.10   \n",
+       "259       entorpy        29            10             0.15   \n",
        "\n",
-       "  test_accuracy  \n",
-       "0           N/A  \n",
-       "1           N/A  \n",
-       "2           N/A  \n",
-       "3           N/A  \n",
-       "4           N/A  \n",
-       "5           N/A  \n",
-       "6           N/A  \n",
-       "7           N/A  "
+       "     validation_accuracy test_accuracy  \n",
+       "0               0.680272           N/A  \n",
+       "1               0.687075           N/A  \n",
+       "2               0.687075           N/A  \n",
+       "3               0.680272           N/A  \n",
+       "4               0.687075           N/A  \n",
+       "..                   ...           ...  \n",
+       "255             0.741497           N/A  \n",
+       "256             0.727891           N/A  \n",
+       "257             0.727891           N/A  \n",
+       "258             0.734694           N/A  \n",
+       "259             0.741497           N/A  \n",
+       "\n",
+       "[260 rows x 6 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,20 +451,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "impurity_func          entorpy\n",
-      "max_depth                    6\n",
-      "min_instances                3\n",
-      "target_impurity              0\n",
-      "validation_accuracy      0.775\n",
-      "test_accuracy              N/A\n",
-      "Name: 6, dtype: object\n"
+      "impurity_func           entorpy\n",
+      "max_depth                    11\n",
+      "min_instances                 6\n",
+      "target_impurity             0.1\n",
+      "validation_accuracy    0.755102\n",
+      "test_accuracy               N/A\n",
+      "Name: 70, dtype: object\n"
      ]
     }
    ],
@@ -437,15 +475,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training with: impurity_func: entorpy, max_depth: 6, min_instances: 3, target_impurity: 0\n",
-      "Result: Validation accuray: 0.775 || Test accuray: 0.729 \n",
+      "Training with: impurity_func: entorpy, max_depth: 11, min_instances: 6, target_impurity: 0.1\n",
+      "Result: Validation accuray: 0.7551020408163265 || Test accuray: 0.6806083650190115 \n",
       "\n"
      ]
     }
