--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part A\n"
+    "# Part A"
    ]
   },
   {
@@ -132,16 +132,6 @@
     "        train_fold = train[train.index % folds != f]\n",
     "        valid_fold = train[train.index % folds == f]\n",
     "    return train_fold, valid_fold\n",
-    "\n",
-    "# def tokenize(x):\n",
-    "#     #tokenize the predict output to int\n",
-    "#     dic = {'hip-hop' : 0, 'pop': 1, 'rock': 2}\n",
-    "#     y = dic[x]\n",
-    "#     return y\n",
-    "\n",
-    "# tokenized_pred = np.array(list(map(tokenize, y_pred)))\n",
-    "# tokenized_actual = np.array(list(map(tokenize, y_actual)))\n",
-    "# print(tokenized_actual)\n",
     "\n",
     "def predict_data(data,tree):\n",
     "    # given a subset dataframe as test data, predict its output alongside with its original answer\n",
@@ -205,8 +195,6 @@
    ],
    "source": [
     "#An example of the accuracy in 10 fold cross validation on trained modal, comparing with accuracy in test data.\n",
-    "\n",
-    "\n",
     "train_fold, valid_fold = n_folds(10,train)\n",
     "print('Training with: impurity_func: {}, max_depth: {}, min_instances: {}, target_impurity: {}'\n",
     "          .format( 'entropy',20,2,0))\n",
