--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -105,7 +105,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part A"
+    "# Part A\n",
+    "**Decision Tree** \\\n",
+    "The decision tree modal implementation is in utils\\ml_utils\\experimental.py. \\\n",
+    "The _DTreeNode class is used for representing the nodes on a decision tree which track left and right subtrees as well as information such as the splitting columns. We can use build_tree function to recursively construct the tree given the dataset, and the predict function after the tree is trained.\\\n",
+    "Meanwhile, the DecisionTree class is used for processing parameters described in hw4 pdf PartA, to train and predict the decision tree constructed using _DTreeNode class. \\\n",
+    "\\\n",
+    "The implementation of gini and entropy are resides in utils\\ml_utils\\metric.py which will be used by our Decision tree modal"
    ]
   },
   {
@@ -114,6 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Given the prediction and actual label, calculate the accuracy of our modal\n",
     "def calc_accuracy(y_pred, y_actual):\n",
     "    correct_cnt = 0\n",
     "    total = len(y_actual)\n",
@@ -127,6 +134,7 @@
     "    \n",
     "    return correct_cnt/total\n",
     "\n",
+    "# function given by lab, used to perform 10 fold cross validation\n",
     "def n_folds(folds,train):\n",
     "    for f in range(folds):\n",
     "        train_fold = train[train.index % folds != f]\n",
@@ -141,6 +149,7 @@
     "\n",
     "    return y_actual, y_pred\n",
     "\n",
+    "# function for apllying modals with different hyperparameters. \n",
     "def apply_DTree(train: pd.DataFrame,\n",
     "                validation: pd.DataFrame,\n",
     "                test: pd.DataFrame,\n",
@@ -224,8 +233,12 @@
    "outputs": [],
    "source": [
     "def para_tuning():\n",
+    "\n",
+    "    #10 fold cross validation\n",
     "    train_fold, valid_fold = n_folds(10,train)\n",
-    "    impurity_funcs = ['entorpy']\n",
+    "\n",
+    "    # finding the best hyperparameter combo and record them in a dataframe\n",
+    "    impurity_funcs = ['entorpy','gini']\n",
     "    records = pd.DataFrame(columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy'])\n",
     "    for max_depth ,min_instances, target_impurity, impurity_func in product(range(5,30,2), range(2,12,2),np.arange(0,0.2,0.05),impurity_funcs):   \n",
     "                    try:\n",
@@ -438,6 +451,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part D"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 134,
    "metadata": {},
@@ -457,6 +478,7 @@
     }
    ],
    "source": [
+    "#Did not use test data in tuning or training (N/A in test_accuracy), here is the best hyperparameter we found on training data.\n",
     "best=records.loc[records['validation_accuracy'].idxmax()]\n",
     "print(best)"
    ]
@@ -477,6 +499,7 @@
     }
    ],
    "source": [
+    "#applying the best hyperparameters to find the accuracy on test.\n",
     "print('Training with: impurity_func: {}, max_depth: {}, min_instances: {}, target_impurity: {}'\n",
     "          .format( best['impurity_func'],best['max_depth'],best['min_instances'],best['target_impurity']))\n",
     "validation_accuracy, test_accuracy = apply_DTree(train = train_fold,\n",
