--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "from utils import ml_utils\n",
     "\n",
-    "from tqdm.contrib.itertools import product\n"
+    "from tqdm.contrib.itertools import product"
    ]
   },
   {
