--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -16,9 +16,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from collections import Counter\n",
     "from utils import ml_utils\n",
-    "from typing import Callable, Union, Any\n",
     "\n",
     "from tqdm.contrib.itertools import product\n"
    ]
@@ -76,9 +74,13 @@
     }
    ],
    "source": [
-    "test = pd.read_csv('data/spotify_test.csv')\n",
-    "train = pd.read_csv('data/spotify_train.csv')\n",
-    "print(test)\n"
+    "TEST_SET_PATH = \"data/spotify_test.csv\"\n",
+    "TRAIN_SET_PATH = \"data/spotify_train.csv\"\n",
+    "\n",
+    "test = pd.read_csv(TEST_SET_PATH)\n",
+    "train = pd.read_csv(TRAIN_SET_PATH)\n",
+    "\n",
+    "test"
    ]
   },
   {
@@ -96,8 +98,10 @@
     }
    ],
    "source": [
-    "test.drop_duplicates(keep=False, inplace=True,subset=test.columns.difference(['track_genre']))\n",
-    "train.drop_duplicates(keep=False, inplace=True, subset=train.columns.difference(['track_genre']))"
+    "COL_TRACK_GENRE = \"track_genre\"\n",
+    "\n",
+    "test.drop_duplicates(keep=False, inplace=True,subset=test.columns.difference([COL_TRACK_GENRE]))\n",
+    "train.drop_duplicates(keep=False, inplace=True, subset=train.columns.difference([COL_TRACK_GENRE]))"
    ]
   },
   {
@@ -120,11 +124,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Given the prediction and actual label, calculate the accuracy of our modal\n",
+    "# Types of impurity functions\n",
+    "ENTROPY = \"entropy\"\n",
+    "GINI = \"gini\"\n",
+    "\n",
     "def calc_accuracy(y_pred, y_actual):\n",
+    "    \"\"\"\n",
+    "    Given the prediction and actual label, calculate the accuracy of the model\n",
+    "    :param y_pred: the predicted category\n",
+    "    :param y_actual: the actual category\n",
+    "    :return: model accuracy\n",
+    "    :raises: ValueError when y_pred and y_actual have different length\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if len(y_pred) != len(y_actual):\n",
+    "        raise ValueError(\"y_pred and y_actual must have the same length\")\n",
+    "\n",
     "    correct_cnt = 0\n",
     "    total = len(y_actual)\n",
-    "    #assume that y_pred and y_actual have same length\n",
     "\n",
     "    for i in range(len(y_actual)):\n",
     "        pre = y_pred[i]\n",
@@ -135,40 +152,48 @@
     "    return correct_cnt/total\n",
     "\n",
     "# function given by lab, used to perform 10 fold cross validation\n",
-    "def n_folds(folds,train):\n",
+    "def n_folds(folds, train):\n",
     "    for f in range(folds):\n",
     "        train_fold = train[train.index % folds != f]\n",
     "        valid_fold = train[train.index % folds == f]\n",
     "    return train_fold, valid_fold\n",
     "\n",
-    "def predict_data(data,tree):\n",
+    "def predict_data(data, tree):\n",
     "    # given a subset dataframe as test data, predict its output alongside with its original answer\n",
-    "    y_actual = data['track_genre'].to_numpy()\n",
+    "    y_actual = data[COL_TRACK_GENRE].to_numpy()\n",
     "    #apply decision tree prediction to each of the row \n",
     "    y_pred = data.apply(lambda row: tree.predict(row), axis = 1).to_numpy()\n",
     "\n",
     "    return y_actual, y_pred\n",
     "\n",
-    "# function for apllying modals with different hyperparameters. \n",
-    "def apply_DTree(train: pd.DataFrame,\n",
-    "                validation: pd.DataFrame,\n",
-    "                test: pd.DataFrame,\n",
-    "                impurity_func: str,\n",
-    "                discrete_threshold: int = 10,\n",
-    "                max_depth: int = None,\n",
-    "                min_instances: int = 2,\n",
-    "                target_impurity: float = 0.0\n",
-    "                ):\n",
-    "    \n",
-    "    impurity_func = ml_utils.metric.entropy if impurity_func == 'entropy'   else  ml_utils.metric.gini\n",
-    "    tree = ml_utils.experimental.DecisionTree(discrete_threshold=discrete_threshold,\n",
-    "                                            max_depth=max_depth,\n",
-    "                                            min_instances=min_instances,\n",
-    "                                            target_impurity=target_impurity,\n",
-    "                                            impurity_func=impurity_func)\n",
-    "    tree.train(train,'track_genre')\n",
-    "    validation_accuracy = 'N/A'\n",
-    "    test_accuracy = 'N/A'\n",
+    "# function for applying modals with different hyperparameters.\n",
+    "def apply_DTree(\n",
+    "        train: pd.DataFrame,\n",
+    "        validation: pd.DataFrame,\n",
+    "        test: pd.DataFrame or None,\n",
+    "        impurity_func_name: str,\n",
+    "        discrete_threshold: int = 10,\n",
+    "        max_depth: int = None,\n",
+    "        min_instances: int = 2,\n",
+    "        target_impurity: float = 0.0\n",
+    "):\n",
+    "    impurity_funcs = {\n",
+    "        ENTROPY: ml_utils.metric.entropy,\n",
+    "        GINI: ml_utils.metric.gini\n",
+    "    }\n",
+    "\n",
+    "    impurity_func = impurity_funcs[impurity_func_name]\n",
+    "    tree = ml_utils.experimental.DecisionTree(\n",
+    "        discrete_threshold=discrete_threshold,\n",
+    "        max_depth=max_depth,\n",
+    "        min_instances=min_instances,\n",
+    "        target_impurity=target_impurity,\n",
+    "        impurity_func=impurity_func\n",
+    "    )\n",
+    "    tree.train(train, COL_TRACK_GENRE)\n",
+    "    validation_accuracy = \"N/A\"\n",
+    "    test_accuracy = \"N/A\"\n",
+    "\n",
     "    if validation is not None:\n",
     "        validation_accuracy = calc_accuracy(*predict_data(validation,tree))\n",
     "    if test is not None:\n",
@@ -203,19 +228,23 @@
     }
    ],
    "source": [
-    "#An example of the accuracy in 10 fold cross validation on trained modal, comparing with accuracy in test data.\n",
-    "train_fold, valid_fold = n_folds(10,train)\n",
-    "print('Training with: impurity_func: {}, max_depth: {}, min_instances: {}, target_impurity: {}'\n",
-    "          .format( 'entropy',20,2,0))\n",
-    "validation_accuracy, test_accuracy = apply_DTree(train = train_fold,\n",
-    "            validation = valid_fold,\n",
-    "            test = test,\n",
-    "            impurity_func = 'entropy',\n",
-    "            discrete_threshold = 10,\n",
-    "            max_depth = 10,\n",
-    "            min_instances = 4,\n",
-    "            target_impurity = 0)\n",
-    "print('Result: Validation accuray: {} || Test accuray: {} \\n'.format(validation_accuracy,test_accuracy))\n"
+    "# An example of the accuracy in 10-fold cross validation on trained modal, comparing with accuracy in test data.\n",
+    "train_fold, valid_fold = n_folds(10, train)\n",
+    "\n",
+    "print(f'Training with: impurity_func: {ENTROPY}, max_depth: {20}, min_instances: {2}, target_impurity: {0}')\n",
+    "\n",
+    "validation_accuracy, test_accuracy = apply_DTree(\n",
+    "    train = train_fold,\n",
+    "    validation = valid_fold,\n",
+    "    test = test,\n",
+    "    impurity_func_name = ENTROPY,\n",
+    "    discrete_threshold = 10,\n",
+    "    max_depth = 10,\n",
+    "    min_instances = 4,\n",
+    "    target_impurity = 0\n",
+    ")\n",
+    "\n",
+    "print(f'Result: Validation accuracy: {validation_accuracy} || Test accuracy: {test_accuracy}')\n"
    ]
   },
   {
@@ -234,26 +263,41 @@
    "source": [
     "def para_tuning():\n",
     "\n",
-    "    #10 fold cross validation\n",
-    "    train_fold, valid_fold = n_folds(10,train)\n",
+    "    # 10-fold cross validation\n",
+    "    train_fold, valid_fold = n_folds(10, train)\n",
     "\n",
     "    # finding the best hyperparameter combo and record them in a dataframe\n",
-    "    impurity_funcs = ['entorpy','gini']\n",
-    "    records = pd.DataFrame(columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy'])\n",
-    "    for max_depth ,min_instances, target_impurity, impurity_func in product(range(5,30,2), range(2,12,2),np.arange(0,0.2,0.05),impurity_funcs):   \n",
-    "                    try:\n",
-    "                        validation_accuracy, test_accuracy =apply_DTree(train = train_fold,\n",
-    "                                    validation = valid_fold,\n",
-    "                                    test = None,\n",
-    "                                    impurity_func = impurity_func,\n",
-    "                                    discrete_threshold = 10,\n",
-    "                                    max_depth = max_depth,\n",
-    "                                    min_instances = min_instances,\n",
-    "                                    target_impurity = target_impurity)\n",
-    "                        row = {'impurity_func': impurity_func, 'max_depth': max_depth, 'min_instances': min_instances, 'target_impurity': target_impurity,'validation_accuracy': validation_accuracy,'test_accuracy': test_accuracy}\n",
-    "                        records = pd.concat([records,pd.DataFrame(row,index=[len(records)])])\n",
-    "                    except:\n",
-    "                        print('Failed with: impurity_func: {}, max_depth: {}, min_instances: {}, target_impurity: {}'.format(impurity_func,max_depth,min_instances,target_impurity))\n",
+    "    impurity_funcs = [ENTROPY, GINI]\n",
+    "    records = pd.DataFrame(\n",
+    "        columns= ['impurity_func', 'max_depth', 'min_instances', 'target_impurity','validation_accuracy','test_accuracy']\n",
+    "    )\n",
+    "\n",
+    "    for max_depth, min_instances, target_impurity, impurity_func in product(\n",
+    "            range(5, 30, 2), range(2, 12, 2), np.arange(0, 0.2, 0.05), impurity_funcs\n",
+    "    ):\n",
+    "        try:\n",
+    "            validation_accuracy, test_accuracy = apply_DTree(\n",
+    "                train = train_fold,\n",
+    "                validation = valid_fold,\n",
+    "                test = None,\n",
+    "                impurity_func_name = impurity_func,\n",
+    "                discrete_threshold = 10,\n",
+    "                max_depth = max_depth,\n",
+    "                min_instances = min_instances,\n",
+    "                target_impurity = target_impurity\n",
+    "            )\n",
+    "            row = {\n",
+    "                'impurity_func': impurity_func, 'max_depth': max_depth, 'min_instances': min_instances,\n",
+    "                'target_impurity': target_impurity, 'validation_accuracy': validation_accuracy, 'test_accuracy': test_accuracy\n",
+    "            }\n",
+    "            records = pd.concat([records, pd.DataFrame(row, index=[len(records)])])\n",
+    "\n",
+    "        except Exception:\n",
+    "            print(\n",
+    "                f'Failed with: impurity_func: {impurity_func}, max_depth: {max_depth}'\n",
+    "                f', min_instances: {min_instances}, target_impurity: {target_impurity}'\n",
+    "            )\n",
+    "\n",
     "    return records"
    ]
   },
@@ -446,7 +490,7 @@
     }
    ],
    "source": [
-    "records =para_tuning()\n",
+    "records = para_tuning()\n",
     "records"
    ]
   },
@@ -479,7 +523,7 @@
    ],
    "source": [
     "#Did not use test data in tuning or training (N/A in test_accuracy), here is the best hyperparameter we found on training data.\n",
-    "best=records.loc[records['validation_accuracy'].idxmax()]\n",
+    "best = records.loc[records['validation_accuracy'].idxmax()]\n",
     "print(best)"
    ]
   },
@@ -500,17 +544,23 @@
    ],
    "source": [
     "#applying the best hyperparameters to find the accuracy on test.\n",
-    "print('Training with: impurity_func: {}, max_depth: {}, min_instances: {}, target_impurity: {}'\n",
-    "          .format( best['impurity_func'],best['max_depth'],best['min_instances'],best['target_impurity']))\n",
-    "validation_accuracy, test_accuracy = apply_DTree(train = train_fold,\n",
-    "            validation = valid_fold,\n",
-    "            test = test,\n",
-    "            impurity_func = best['impurity_func'],\n",
-    "            discrete_threshold = 10,\n",
-    "            max_depth = best['max_depth'],\n",
-    "            min_instances = best['min_instances'],\n",
-    "            target_impurity =  best['target_impurity'])\n",
-    "print('Result: Validation accuray: {} || Test accuray: {} \\n'.format(validation_accuracy,test_accuracy))"
+    "print(\n",
+    "    f'Training with: impurity_func: {best[\"impurity_func\"]}, max_depth: {best[\"max_depth\"]}'\n",
+    "    f', min_instances: {best[\"min_instances\"]}, target_impurity: {best[\"target_impurity\"]}'\n",
+    ")\n",
+    "\n",
+    "validation_accuracy, test_accuracy = apply_DTree(\n",
+    "    train = train_fold,\n",
+    "    validation = valid_fold,\n",
+    "    test = test,\n",
+    "    impurity_func_name = best['impurity_func'],\n",
+    "    discrete_threshold = 10,\n",
+    "    max_depth = best['max_depth'],\n",
+    "    min_instances = best['min_instances'],\n",
+    "    target_impurity =  best['target_impurity']\n",
+    ")\n",
+    "\n",
+    "print(f'Result: Validation accuracy: {validation_accuracy} || Test accuracy: {test_accuracy}')"
    ]
   }
  ],
