--- a/HW4/hw4.ipynb
+++ b/HW4/hw4.ipynb
@@ -458,20 +458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "impurity_func           entorpy\n",
+      "impurity_func              gini\n",
       "max_depth                    11\n",
-      "min_instances                 6\n",
+      "min_instances                 5\n",
       "target_impurity             0.1\n",
-      "validation_accuracy    0.755102\n",
+      "validation_accuracy    0.761905\n",
       "test_accuracy               N/A\n",
-      "Name: 70, dtype: object\n"
+      "Name: 1, dtype: object\n"
      ]
     }
    ],
